fixing sonar