@@ -12,11 +12,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 
 import java.math.BigDecimal;
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -42,8 +40,13 @@ public class BacktestQueryService {
             "totalTrades", "winRate", "status", "symbol", "strategyCode"
     );
 
-    public Map<String, Object> listRuns(
-            UUID userId,
+    /**
+     * Filter / pagination / sort bundle for {@link #listRuns}. Bundled into a
+     * single argument so the service signature stays under the parameter
+     * ceiling — the controller still accepts each value as its own
+     * {@code @RequestParam}.
+     */
+    public record ListRunsQuery(
             int page,
             int size,
             String status,
@@ -55,25 +58,27 @@ public class BacktestQueryService {
             String sortBy,
             String sortDir,
             String triggeredBy
-    ) {
-        int effectiveSize = size > 0 ? size : 20;
-        int offset = Math.max(0, page) * effectiveSize;
+    ) {}
 
-        String effectiveSort = (sortBy != null && SORTABLE_COLUMNS.contains(sortBy))
-                ? sortBy
+    public Map<String, Object> listRuns(UUID userId, ListRunsQuery q) {
+        int effectiveSize = q.size() > 0 ? q.size() : 20;
+        int offset = Math.max(0, q.page()) * effectiveSize;
+
+        String effectiveSort = (q.sortBy() != null && SORTABLE_COLUMNS.contains(q.sortBy()))
+                ? q.sortBy()
                 : "createdAt";
-        String effectiveDir = "ASC".equalsIgnoreCase(sortDir) ? "ASC" : "DESC";
+        String effectiveDir = "ASC".equalsIgnoreCase(q.sortDir()) ? "ASC" : "DESC";
 
         // Normalise blank strings to null so the CAST(:param AS TEXT) IS NULL
         // guard in the repository query activates correctly. Spring's binder
         // delivers empty strings when the client sends `?status=` — those
         // should disable the filter, not match rows where status = ''.
-        String statusFilter = blankToNull(status);
+        String statusFilter = blankToNull(q.status());
         // Escape ILIKE wildcards so a user-supplied "%" doesn't match all rows.
-        String strategyFilter = escapeLike(blankToNull(strategyCode));
-        String symbolFilter = escapeLike(blankToNull(symbol));
-        String intervalFilter = blankToNull(intervalName);
-        String triggeredByFilter = blankToNull(triggeredBy);
+        String strategyFilter = escapeLike(blankToNull(q.strategyCode()));
+        String symbolFilter = escapeLike(blankToNull(q.symbol()));
+        String intervalFilter = blankToNull(q.intervalName());
+        String triggeredByFilter = blankToNull(q.triggeredBy());
 
         List<BacktestRun> runs = backtestRunRepository.findFiltered(
                 userId,
@@ -82,8 +87,8 @@ public class BacktestQueryService {
                 strategyFilter,
                 symbolFilter,
                 intervalFilter,
-                fromDate,
-                toDate,
+                q.fromDate(),
+                q.toDate(),
                 effectiveSort,
                 effectiveDir,
                 effectiveSize,
@@ -96,8 +101,8 @@ public class BacktestQueryService {
                 strategyFilter,
                 symbolFilter,
                 intervalFilter,
-                fromDate,
-                toDate
+                q.fromDate(),
+                q.toDate()
         );
 
         // Include metrics on the list — the frontend run table renders Return,
@@ -105,10 +110,10 @@ public class BacktestQueryService {
         // failure rather than the intended "still RUNNING" state.
         List<BacktestRunDetailResponse> content = runs.stream()
                 .map(r -> toDetail(r, true))
-                .collect(Collectors.toList());
+                .toList();
         Map<String, Object> result = new LinkedHashMap<>();
         result.put("content", content);
-        result.put("page", page);
+        result.put("page", q.page());
         result.put("size", effectiveSize);
         result.put("total", total);
         result.put("sortBy", effectiveSort);
@@ -150,22 +155,22 @@ public class BacktestQueryService {
         requireOwnedRun(userId, id);
         return equityPointRepository.findByBacktestRunIdOrderByEquityDateAsc(id).stream()
                 .map(this::toEquityPoint)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<BacktestTradeDetailResponse> getTrades(UUID userId, UUID id) {
         requireOwnedRun(userId, id);
         List<BacktestTrade> trades = backtestTradeRepository.findAllByBacktestRunId(id);
         return trades.stream()
-                .map(t -> toTradeDetail(t))
-                .collect(Collectors.toList());
+                .map(this::toTradeDetail)
+                .toList();
     }
 
     public List<MarketDataResponse> getCandles(UUID userId, UUID id) {
         BacktestRun run = requireOwnedRun(userId, id);
         List<MarketData> candles = marketDataRepository.findBySymbolIntervalAndRange(
                 run.getAsset(), run.getInterval(), run.getStartTime(), run.getEndTime());
-        return candles.stream().map(this::toMarketData).collect(Collectors.toList());
+        return candles.stream().map(this::toMarketData).toList();
     }
 
     private BacktestRun requireOwnedRun(UUID userId, UUID id) {
@@ -269,7 +274,7 @@ public class BacktestQueryService {
                         .exitReason(p.getExitReason())
                         .realizedPnl(p.getRealizedPnlAmount())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         return BacktestTradeDetailResponse.builder()
                 .id(t.getBacktestTradeId())
