@@ -23,7 +23,6 @@ import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -46,7 +45,7 @@ public class UnifiedTradeService {
             return Collections.emptyList();
         }
 
-        int effectiveSize = size > 0 ? Math.min(size, MAX_LIMIT) : (limit > 0 ? Math.min(limit, MAX_LIMIT) : DEFAULT_LIMIT);
+        int effectiveSize = resolveEffectiveSize(size, limit);
         int offset = page * effectiveSize;
 
         List<Trades> trades;
@@ -58,7 +57,18 @@ public class UnifiedTradeService {
 
         return trades.stream()
                 .map(t -> toTradeResponse(t, false))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    /** Resolve the effective page size from the explicit {@code size} param,
+     *  falling back to the legacy {@code limit} param when {@code size} is
+     *  unset, then to {@link #DEFAULT_LIMIT}. Both inputs are clamped at
+     *  {@link #MAX_LIMIT}. Pulled out so the parent ternary chain doesn't
+     *  nest (Sonar S3358). */
+    private static int resolveEffectiveSize(int size, int limit) {
+        if (size > 0) return Math.min(size, MAX_LIMIT);
+        if (limit > 0) return Math.min(limit, MAX_LIMIT);
+        return DEFAULT_LIMIT;
     }
 
     public TradeResponse getTradeById(UUID userId, UUID tradeId) {
@@ -100,7 +110,7 @@ public class UnifiedTradeService {
         }
         return accountRepository.findByUserId(userId).stream()
                 .map(Account::getAccountId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private TradeResponse toTradeResponse(Trades t, boolean includePositions) {
@@ -162,7 +172,7 @@ public class UnifiedTradeService {
                 .feeUsdt(t.getTotalFeeAmount())
                 .markPrice(markPrice)
                 .unrealizedPnlPct(unrealizedPnlPct)
-                .positions(positions.stream().map(this::toPositionResponse).collect(Collectors.toList()))
+                .positions(positions.stream().map(this::toPositionResponse).toList())
                 .build();
     }
 
